--- a/plugins/google-play-services/billing/launch_billing_flow.html
+++ b/plugins/google-play-services/billing/launch_billing_flow.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link inactive" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
@@ -253,7 +253,7 @@
                                 <b>Offer Token</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A Token retrieved when <a href="querying_product_details.html">Querying Product Details</a> which would indicate a specific offer on a Subscription's base plan. </br>
+                                A Token retrieved when <a href="query_product_details.html">Querying Product Details</a> which would indicate a specific offer on a Subscription's base plan. </br>
                                 This is not required for consumable/non-consumable in app purchases. </br>
                                 You can use the <a href="supporting_nodes.html">Get Subscription Offer Token</a> blueprint node to extract the desired offer token.
                             </p>
