--- a/plugins/google-play-services/billing/product_details.html
+++ b/plugins/google-play-services/billing/product_details.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link inactive" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
@@ -380,12 +380,9 @@
                             </tr>
                             <tr>
                                 <td>RecurrenceMode</td>
-                                <td>int32</td>
+                                <td><a href="enumerations.html">ERecurrenceMode</a></td>
                                 <td style="min-width: 300px">
-                                    The recurrence mode of the pricing phase.</br>
-                                    This can be 0, for Finite Recurring (recurs for a fixed number of billing periods set in billingCycleCount) </br>
-                                    1, an infinite period untill cancelled </br>
-                                    2, a one time charge (non-recurring).
+                                    The recurrence mode of the pricing phase.
                                 </td>
                             </tr>
                             <tr>
