--- a/plugins/google-play-services/billing/purchase.html
+++ b/plugins/google-play-services/billing/purchase.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link inactive" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
@@ -216,12 +216,9 @@
                         <tbody>
                             <tr>
                                 <td>PurchaseState</td>
-                                <td>int32</td>
+                                <td><a href="enumerations.html">EPurchaseState</a></td>
                                 <td>
-                                    The state of the purchase.</br>
-                                    This can be 0, for an unspecified state (this should rarely occur) </br>
-                                    1, when the purchase has succesfully been processed</br>
-                                    2, when the purchase is still in a pending state.
+                                    The processing state of the purchase.
                                 </td>
                             </tr>
                             <tr>
