--- a/plugins/google-play-services/billing/supporting_nodes.html
+++ b/plugins/google-play-services/billing/supporting_nodes.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link inactive" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
@@ -245,7 +245,7 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            A Quality of life blueprint node which finds the offer token from the <a href="product_details.html">Product Details</a> retrieved when <a href="querying_product_details.html">Querying Product Details</a>.
+                            A Quality of life blueprint node which finds the offer token from the <a href="product_details.html">Product Details</a> retrieved when <a href="query_product_details.html">Querying Product Details</a>.
                         </p>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                                 <b>Subscription Products</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A list of Subscription <a href="product_details.html">Product Details</a> retrieved when <a href="querying_product_details.html">Querying Product Details</a>.
+                                A list of Subscription <a href="product_details.html">Product Details</a> retrieved when <a href="query_product_details.html">Querying Product Details</a>.
                             </p>
                         </div>
                     </div>
