--- a/plugins/google-play-services/billing/getting_started.html
+++ b/plugins/google-play-services/billing/getting_started.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link inactive" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
