--- a/plugins/google-play-services/billing/query_product_details.html
+++ b/plugins/google-play-services/billing/query_product_details.html
@@ -114,8 +114,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="querying_product_details.html">
-                                Querying Product Details
+                            <a class="nav-link active" href="query_product_details.html">
+                                Query Product Details
                             </a>
                         </li>
                         <li class="nav-item">
@@ -184,7 +184,7 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Querying Product Details</h1>
+                    <h1 class="h2 text-white-shadow">Query Product Details</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
