--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
                 </div>
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/billing/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
+                    class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Play: Billing
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
@@ -152,6 +164,25 @@
             </div>
           </a>
         </div>
+        <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/google-play-services/billing/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom aquamarine">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Play Services: Billing</h5>
+              </div>
+              <img src="images/Billing/GooglePlay_Billing_Feature.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine blueprint nodes exposing Google Play's billing service to Android Game Developers.
+                </p>
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/ee2aadf1b3f245949744c04343425630' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -164,7 +195,7 @@
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
           <a href="./Squiggle.html" class="text-decoration-none">
-            <div class="card text-center card-custom aquamarine">
+            <div class="card text-center card-custom blue">
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Squiggle</h5>
               </div>
