--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -80,6 +80,18 @@
                 </div>
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" href="plugins/google-play-services/billing/overview.html">
+                <div class="dropdown-item-content">
+                  <img src="./images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
+                    class="dropdown-item-image">
+                  <div class="dropdown-item-text">
+                    Play: Billing
+                    <span class="dropdown-item-subtext">Android Plugin</span>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
