--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,7 @@
         </br>
         <p class="lead">Discord: <a href="https://discord.gg/DYTNxrXG">Invite Link</a></p>
         <p class="lead">Email: <b>porretgaming@gmail.com</b></p>
+        <p class="lead">Twitter: <a href="https://twitter.com/PorretGaming">@PorretGaming</a></p>
       </div>
     </div>
   </div>
