--- a/plugins/google-play-services/events/contact.html
+++ b/plugins/google-play-services/events/contact.html
@@ -172,7 +172,8 @@
                     <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
                             You can get support by emailing us at "porretgaming@gmail.com". </br></br>
-                            Get in touch with our community on our <a href="https://discord.gg/DYTNxrXG">Discord Server</a>.
+                            Get in touch with our community on our <a href="https://discord.gg/DYTNxrXG">Discord Server</a>.</br>
+                            Twitter: <a href="https://twitter.com/PorretGaming">@PorretGaming</a>
                         </p>
                     </div>
                 </div>
