add step to add your google play license key

--- a/plugins/google-play-services/billing/getting_started.html
+++ b/plugins/google-play-services/billing/getting_started.html
@@ -245,6 +245,21 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
+                                Add your Google Play License Key
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Add your "Google Play License Key" from the Google Play Console.</br>
+                                Go to <span style="font-weight: 500; white-space: nowrap;">Project Settings</span> ->
+                                <span style="font-weight: 500; white-space: nowrap;">Android</span> -> <span
+                                    style="font-weight: 500; white-space: nowrap;">Google Play Services</span> and
+                                fill in "<span style="font-weight: 500; white-space: nowrap;">Google Play License Key</span>".
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/Billing/GooglePlayServices_GooglePlayLicenseKey.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
                                 Login to Google Play Services
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
