remove the need for show external ui login for billing and update with link to shop

--- a/plugins/google-play-services/billing/getting_started.html
+++ b/plugins/google-play-services/billing/getting_started.html
@@ -205,7 +205,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the Official Unreal Engine Marketplace.
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/ee2aadf1b3f245949744c04343425630" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
@@ -257,19 +257,6 @@
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
                                     <img style="max-width: 80%" src="../../../images/Billing/GooglePlayServices_GooglePlayLicenseKey.png">
-                                </div>
-                            </div>
-                            <li class="list-group-item">
-                                Login to Google Play Services
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                On Game startup, add the Unreal Engine provided node (not provided by this plugin) to
-                                login to Google Play Services.</br>
-                                The node is called "<span style="font-weight: 500">Show External Login UI</span>".
-                            </p>
-                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                                <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/UE_Blueprint_GoogleLogin.png">
                                 </div>
                             </div>
                         </ol>
