--- a/plugins/google-play-services/events/getting_started.html
+++ b/plugins/google-play-services/events/getting_started.html
@@ -175,7 +175,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/7ea00486f68840c8a03c2134ec97db52">Official Unreal Engine Marketplace.</a>
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/7ea00486f68840c8a03c2134ec97db52" target="_blank">Official Unreal Engine Marketplace.</a>
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
