--- a/plugins/google-play-services/billing/query_product_details.html
+++ b/plugins/google-play-services/billing/query_product_details.html
@@ -275,6 +275,27 @@
                         </div>
                     </div>
                 </div>
+                <div style="margin-top: 50px">
+                    <h1 class="h3">Example</h1>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
+                    <div class="info">
+                        <p class="content">
+                            In the below example, we are querying INAPP products given a list of product IDs retrieved from the Google Play Console.</br>
+                            Depending on your use case, you can create your own functions to handle the results of product details and handling of errors.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            When dealing with subscriptions with different base plans and offers, you may want to save the product details as a variable for use when <a href="launch_billing_flow.html">Launching a Subscription Billing Flow</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/Billing/QueryProductDetails_Example.png" style="max-width: 90%;">
+                    </div>
+                </div>
                 <div style="margin-bottom: 300px">
                 </div>
             </main>
