--- a/plugins/google-play-services/billing/query_purchase_history.html
+++ b/plugins/google-play-services/billing/query_purchase_history.html
@@ -261,6 +261,31 @@
                         </div>
                     </div>
                 </div>
+                <div style="margin-top: 50px">
+                    <h1 class="h3">Example</h1>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
+                    <div class="info">
+                        <p class="content">
+                            In the below example, we are checking for any recent purchase that have been made.</br>
+                            Depending on your use case, you can create your own function to handle the results. Similarly you can create your own method to handle errors.
+                        </p>
+                        <p class="content">
+                            Keep in mind, this only provides the most recent purhcases grouped by product, not the entire purchase history for each product. Google does not provide a full history.
+                            If you want a full history, you will have to keep track of this yourself.</br>
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The <a href="https://porret-gaming.github.io/plugins/google-play-services/saved-games/overview.html?utm_source=Internal%20Recommendation">Play Services: Saved Games</a> plugin is a great solution to keep track of player data across devices using the cloud.
+                        </p>
+                    </div>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/Billing/QueryPurchaseHistory_Example.png" style="max-width: 70%;">
+                    </div>
+                </div>
                 <div style="margin-bottom: 300px">
                 </div>
             </main>
