--- a/plugins/google-play-services/billing/show_inapp_messages.html
+++ b/plugins/google-play-services/billing/show_inapp_messages.html
@@ -245,6 +245,28 @@
                         </div>
                     </div>
                 </div>
+                <div style="margin-top: 50px">
+                    <h1 class="h3">Example</h1>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
+                    <div class="info">
+                        <p class="content">
+                            In the below example, we are checking for any messages related to your application's products/subscriptions to provide the user with.</br>
+                            In the event there are messages, Google will show these to the player for you. </br>
+                            You can create your own custom function to handle when a message was displayed to the user.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The most common example of this is acknowledging a subscription price change.
+                        </p>
+                    </div>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/Billing/ShowInAppMessages_Example.png" style="max-width: 70%;">
+                    </div>
+                </div>
                 <div style="margin-bottom: 300px">
                 </div>
             </main>
