--- a/plugins/google-play-services/billing/check_for_purchases.html
+++ b/plugins/google-play-services/billing/check_for_purchases.html
@@ -263,6 +263,30 @@
                         </div>
                     </div>
                 </div>
+                <div style="margin-top: 50px">
+                    <h1 class="h3">Example</h1>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; position: relative; margin-top: 15px;">
+                    <div class="info">
+                        <p class="content">
+                            In the below example, we are checking for any pending transactions which may have completed while your app was closed/offline.</br>
+                            Depending on your use case, you can create your own function to handle the purchase and reward the player appropriately. Similarly you can create your own method to handle errors.
+                        </p>
+                        <p class="content">
+                            This should be run at application start-up to reward the player appropriately for any purchases made.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The ProductType parameter to allow you to handle subscriptions and inapp products seperately if so desired, but do not forget to check for both.
+                        </p>
+                    </div>
+                </div>
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; padding-top: 20px; padding-bottom: 20px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/Billing/CheckForPurchases_Example.png" style="max-width: 70%;">
+                    </div>
+                </div>
                 <div style="margin-bottom: 300px">
                 </div>
             </main>
