fix: update discord link

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
           For any queries, feel free to contact me making use of the following details.
         </p>
         </br>
-        <p class="lead">Discord: <a href="https://discord.gg/Yqg3JPsW">Invite Link</a></p>
+        <p class="lead">Discord: <a href="https://discord.gg/GgtddXNYRN">Invite Link</a></p>
         <p class="lead">Email: <b>porretgaming@gmail.com</b></p>
         <p class="lead">Twitter: <a href="https://twitter.com/PorretGaming">@PorretGaming</a></p>
       </div>
