add a Getting Started step for the billing plugin to disable other billing plugins

--- a/plugins/google-play-services/billing/getting_started.html
+++ b/plugins/google-play-services/billing/getting_started.html
@@ -229,6 +229,13 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
+                                Disable Any Other Billing Plugins
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Other plugins or software upgrading the Billing Library for you can cause issues or even override this plugins update.</br>
+                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> and disable any other custom Billing plugins you may have purchased off the Marketplace.</br>
+                            </p>
+                            <li class="list-group-item">
                                 Enable Google Play Support
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
