remove new tags from home page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <!-- <img class="new-tag" alt='New!' src='images/NewTag.png' /> -->
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Saved Games</h5>
               </div>
@@ -147,7 +147,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/events/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <!-- <img class="new-tag" alt='New!' src='images/NewTag.png' /> -->
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Events</h5>
               </div>
@@ -167,7 +167,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/billing/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom aquamarine">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <!-- <img class="new-tag" alt='New!' src='images/NewTag.png' /> -->
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Billing</h5>
               </div>
