fix contact apge sidemenu highlight

--- a/plugins/android-native/sensors/contact.html
+++ b/plugins/android-native/sensors/contact.html
@@ -116,7 +116,7 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="overview.html">
+                            <a class="nav-link inactive" href="overview.html">
                                 Overview
                             </a>
                         </li>
@@ -179,7 +179,7 @@
                             <a class="nav-link disabled">Support</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="contact.html">
+                            <a class="nav-link active" href="contact.html">
                                 Contact
                             </a>
                         </li>
